<resources>
    <string name="active">Active</string>

    <string name="add_car">Add Car</string>
    <string name="add_config">Add Config</string>
    <string name="add_server">Add Server</string>

    <string name="app_name">Super Mileage</string>

    <string name="car_name_placeholder">Car Name</string>
    <string name="config_name_placeholder">Config Name</string>

    <string name="config_json_placeholder">Config json goes here</string>

    <string name="local_cars">Local Cars</string>
    <string name="local_configs">Local Configs</string>

    <string name="remote_cars">Server Cars</string>
    <string name="remote_configs">Server Configs</string>

    <string name="save_server">Save</string>

    <string name="server_ip">Server IP</string>
    <string name="server_ip_placeholder">Server IP</string>
    <string name="server_port">Server Port</string>
    <string name="server_port_placeholder">Server Port</string>
    <string name="server_name">Server Name</string>
    <string name="server_name_placeholder">Server Name</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="select">Select</string>
    <string name="status_placeholder">Status</string>
    <string name="server_presence">Server Presence</string>
    <string name="server_reachability_true">Server is reachable</string>
    <string name="config_reload">Refresh</string>
    <string name="config_confirm">Confirm</string>
    <string name="configuration_unavailable">Configuration Unavailable</string>
</resources>
